Configurate products page and create sidebar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
   </head>
   <body
-    class="sm:px-0 md:px-12 lg:px-32 xl:px-60 bg-background dark:bg-backgroundD text-text dark:text-textD font-sans"
+    class="container mx-auto items-center bg-background dark:bg-backgroundD text-text dark:text-textD font-sans"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
